--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<section id="block-intro">
 		<div class="container">
 			<div id="intro-icon">
-				<img id="myPhoto" src="images/me.gif">
+				<img id="myPhoto" src="images/me.jpg">
 			</div>
 			
 			<div id="intro-text">
