--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 				</ul>
 				<div class="fr">
 					<p>我是一个性格幽默、做事认真的人。<br>我喜欢研究新技术，不给自己设边界，希望未来能不重复造轮子。<br>我有时间概念，能在约定时间内保证完成任务。</p>
-					<p>从16年底开始自学web前端技术， 掌握HTML、CSS，熟悉Javascript，能独立完成小型网站的制作与发布。<br>
-						一点点完美主义。<br>
-						对前端框架有一定了解，包括jQuery、Bootstrap,z仍在努力学习中。<br>
-						希望将来学习java、Python,可以胜任后端工程师。
+					<p>从16年开始自学web前端技术， 掌握HTML、CSS，熟悉Javascript，能独立完成小型网站的制作与发布。对表现与数据分离、Web语义化有深刻理解。对主流浏览器的兼容问题，前端性能优化有一定知识积累。<br><br>
+						对前端框架有一定了解，包括jQuery、Bootstrap。<br>
+						希望将来学习java、Python等后端语言,可以胜任后端工程师。
 					</p>
 				</div>
 			</div>
