--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					<li><span>邮箱</span> | <a href="mailto:morebaiwei@gmail.com" hideFocus="true">morebaiwei@gmail.com</a>
 					<li><span>所在地</span> | 浙江 - 杭州</li>
 					<li><span>GitHub</span> | <a href="http://github.com/baiweichen" hideFocus="true">点击进入</a> </li>
+                                        <li><span>博客园</span> | <a href="http://www.cnblogs.com/baiweichen" hideFocus="true">点击进入</a> </li>
 				</ul>
 				<div class="fr">
 					<p>我是一个性格幽默、做事认真的人。<br>我喜欢研究新技术，不给自己设边界，希望未来能不重复造轮子。<br>我有时间概念，能在约定时间内保证完成任务。</p>
